Reduce usage of Guava library